<resources>
    <string name="app_name">StudioQ</string>
    <string name="folderName">Folder Name</string>
    <string name="fileCount">File count</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="CopyOrMove">Copy or move files?</string>
    <string name="Cancel">Cancel</string>
    <string name="Okay">Okay</string>
    <string name="enterTheTitle">Untitled</string>
    <string name="doYouWantToDelete">Do you want to delete last file?</string>
    <string name="copyDuplicate">You have already copied the data to the chosen folder, do you want to restore files in this folder</string>

    <!-- Common for menus !-->
    <string name="add">Add</string>
    <string name="shareItem">Share</string>
    <string name="checkAll">Check all</string>
    <string name="deleteItem">Delete</string>

    <!-- For utils !-->
    <string name="createAlbum">Create</string>

    <!-- For slider !-->
    <string name="filter">Filter</string>
    <string name="info">Details</string>

    <!-- For settings !-->
    <string name="settings">Settings</string>
    <string name="photosOnly">Photos</string>
    <string name="videoOnly">Video</string>
    <string name="allMedia">All</string>

    <!-- Sorting !-->
    <string name="sortOption">Sort</string>
    <string name="sortByName">By name</string>
    <string name="sortBySize">By size</string>
    <string name="sortByDate">By date</string>

</resources>
